@@ -1,3 +1,7 @@
+- 5:
+	- Added:
+		- no8177_element_insert()
+
 - 4:
 	- Added:
 		- no8177_file_name()
